tests/ui/wf/wf-trait-fn-ret.stderr
error[E0277]: the trait bound `Self: Eq` is not satisfied
  --> $DIR/wf-trait-fn-ret.rs:10:23
   |
LL |     fn bar(&self) -> &Bar<Self>;
   |                       ^^^^^^^^^ the trait `Eq` is not implemented for `Self`
   |
note: required by a bound in `Bar`
  --> $DIR/wf-trait-fn-ret.rs:7:14
   |
LL | struct Bar<T:Eq+?Sized> { value: Box<T> }
   |              ^^ required by this bound in `Bar`
help: consider further restricting `Self`
   |
LL |     fn bar(&self) -> &Bar<Self> where Self: Eq;
   |                                 ++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
